--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aileron:wght@900&display=swap');
 
 .container {
   font-family: 'Nunito', sans-serif;
@@ -76,6 +77,7 @@
 }
 
 .heroTitle {
+  font-family: 'Aileron', sans-serif;
   font-size: 4rem;
   font-weight: 900;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
@@ -172,9 +174,10 @@
 }
 
 .footerTitle {
+  font-family: 'Aileron', sans-serif;
   color: white;
   font-size: 1.5rem;
-  font-weight: 800;
+  font-weight: 900;
   margin-bottom: 0.5rem;
 }
 
